--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,28 +1,228 @@
-.App {
-  text-align: center;
+body::before {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background: inherit;
+  background-position: center bottom;
+  background-attachment: fixed;
+  background-size: cover;
+  content: "";
+  -webkit-filter: blur(10px);
+  filter: blur(10px);
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+body::after {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(var(--primary-light), 0.5);
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+body {
+  --background-image: 'url(/demo/default-bg.jpg)';
+  --primary-dark : 17, 39, 51;
+  --primary-darker : 15, 35, 46;
+  --primary-dark-accent : 5,50,79;
+  --primary-light: 7, 40, 53;
+  --primary-accent: 3, 216, 245;
+  --topbar-height: 70px;
+  --left-menu-width: 258px;
+  background: no-repeat fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  width: 100%;
+  min-height: 100%;
+  -moz-transition: background-image 1s ease-in-out;
+  -webkit-transition: background-image 1s ease-in-out;
+  -ms-transition: background-image 1s ease-in-out;
+  -o-transition: background-image 1s ease-in-out;
   color: white;
 }
 
-.App-title {
-  font-size: 1.5em;
+#root .main-content {
+  padding: 50px;
+  padding-left: 80px;
+  margin: var(--topbar-height) 1rem 1rem 1rem;
+  -webkit-transition: 300ms ease all;
+  transition: 300ms ease all;
 }
 
-.App-intro {
-  font-size: large;
+#root .main-content.main-menu-visible {
+  margin: var(--topbar-height) 1rem 1rem var(--left-menu-width);
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+#root .ui.topbar .menu-title{
+  text-transform: capitalize;
+}
+
+#root .ui.topbar {
+  background-color: rgba(var(--primary-darker), 0.8);
+  border: none;
+  min-height: var(--topbar-height);
+  max-height: var(--topbar-height);
+  max-width: 100vw;
+  width: 100vw;
+  position: fixed;
+  top:0;
+  right:0;
+  left:0;
+  z-index: 3;
+  -webkit-transition: 300ms ease all;
+  transition: 300ms ease all;
+}
+
+#root .ui.topbar.main-menu-visible {
+  left:var(--left-menu-width);
+  width:calc(100vw - var(--left-menu-width));
+  max-width: calc(100vw - var(--left-menu-width));
+}
+
+#root .item {
+  color: white;
+}
+
+#root .ui.attached.menu:not(.tabular) {
+  border: none;
+}
+
+#root .ui.menu .sidebar-content .item {
+  padding-left: 25px;
+  padding-right: 25px;
+}
+#root .ui.menu .sidebar-content .item i {
+  margin-top:-1px;
+  float:left;
+  margin-right:25px;
+
+}
+
+#root .ui.left.sidebar {
+  -webkit-transition: 300ms ease all;
+  transition: 300ms ease all;
+}
+
+
+#root .ui.menu .header {
+  padding-left: 15px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: #676767;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+#root .ui.menu .item.active {
+  border-right: 3px solid rgb(var(--primary-accent));
+  color: rgb(var(--primary-accent));
+  font-weight: 700;
+}
+
+#root .ui.vertical.menu:before, #root .ui.topbar:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background: inherit;
+  background-position: center bottom;
+  background-attachment: fixed;
+  background-size: cover;
+  content: "";
+  -webkit-filter: blur(1px);
+  filter: blur(1px);
+}
+
+#root .ui.vertical.menu {
+  background-color: rgba(var(--primary-dark), 0.6);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+#root .sidebar-content .header-logo img {
+  vertical-align: middle;
+  display: inline;
+  margin-right: 15px;
+  box-shadow: none;
+}
+
+#root .sidebar-content .header-logo {
+  background-color: rgba(var(--primary-darker), 0.6);
+  font-size: 1.3rem;
+  font-weight: bold;
+  padding-left: 20px !important;
+  padding-right: 0 !important;
+  margin-bottom: 30px;
+}
+
+#root {
+  color: white;
+}
+
+#root .ui.card .header {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+#root .ui.card {
+  border: none;
+  background-color: transparent;
+  border-radius: 0;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+}
+
+#root .ui.card img, #root .ui.card>:first-child {
+  border-radius: 0 !important;
+}
+
+#root .ui.card .content {
+  padding: 1em 0;
+  color: white;
+}
+
+#root .card .content .header {
+  font-weight: 200;
+  color: white;
+  font-size: 1rem;
+}
+
+#root .card .content .meta {
+  color: rgba(255,255,255,.4);
+}
+
+.app {
+  min-height: 100vh;
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+.app .header.logo {
+  font-size: 1.5rem;
+}
+.app .header.logo img {
+  display: inline;
+  margin-right: 10px;
+}
+
+#root .app .main-menu {
+  margin:0;
+  width: 100%;
+  height:100%;
+  color: white;
+}
+
+.app .ui.menu a.item, .app .ui.menu .item  {
+  color: white !important;
+  vertical-align: middle;
+  padding: 35px;
 }
