--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -172,13 +172,13 @@ body {
   color: white;
 }
 
-#root .ui.card .header {
+#root .ui.card.media-item .header {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
 }
 
-#root .ui.card {
+#root .ui.card.media-item {
   border: none;
   background-color: transparent;
   border-radius: 0;
@@ -187,48 +187,45 @@ body {
   width: 100%;
 }
 
-#root .ui.card img, #root .ui.card>:first-child {
+#root .ui.card.media-item img, #root .ui.card.media-item>:first-child {
   border-radius: 0 !important;
 }
 
-#root .ui.card .content {
+#root .ui.card.media-item .content {
   padding: 1em 0;
   color: white;
 }
 
-#root .card .content .header {
+#root .card.media-item .content .header {
   font-weight: 200;
   color: white;
   font-size: 1rem;
 }
 
-#root .card .content .meta {
+#root .card.media-item .content .meta {
   color: rgba(255,255,255,.4);
 }
 
-.app {
-  min-height: 100vh;
-  display: flex;
-  flex-flow: column nowrap;
-}
-
-.app .header.logo {
-  font-size: 1.5rem;
-}
-.app .header.logo img {
-  display: inline;
-  margin-right: 10px;
-}
-
-#root .app .main-menu {
-  margin:0;
-  width: 100%;
-  height:100%;
+#root .settings .ui.segment .item .content, #root .settings .ui.segment .item .content .header {
   color: white;
 }
 
-.app .ui.menu a.item, .app .ui.menu .item  {
-  color: white !important;
-  vertical-align: middle;
-  padding: 35px;
+#root .settings .ui.segment .item .content .card {
+  background-color:  transparent;
+
+}
+
+#root .settings .ui.card, #root .settings .ui.card .description input {
+  background-color:  rgba(255, 255, 255,.5);
+  border-color: transparent;
+}
+
+#root .settings .ui.card .description .library-folder {
+  padding: 20px;
+  font-size: 1.8rem;
+}
+
+#root .settings .ui.card .description input:hover {
+  cursor: pointer;
+  border: 1px solid rgba(var(--primary-darker), 0.7);
 }
