--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -310,16 +310,21 @@ body {
   margin-left: 6px;
 }
 
-#root .media-page .media-overview-panel {
-  margin-top: 20px;
+#root .media-page .media-page-segment {
+  margin-bottom: 30px;
+}
+
+#root .media-page .media-page-segment .ui.tiny.progress,
+#root .media-page .media-page-segment .ui.tiny.progress .bar {
+  height: 3px;
+}
+
+#root .media-page .media-page-segment .ui.tiny.progress .bar {
+  background-color: rgba(var(--primary-accent), 1);
 }
 
 #root .media-page .meta-right {
   text-align: right
-}
-
-#root .media-page .ui.icon.button {
-  position: relative;
 }
 
 #root .ui.menu {
