--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -37,6 +37,7 @@ body {
   --topbar-height: 70px;
   --left-menu-width: 258px;
   --text-color: 255, 255, 255;
+  --z-index-for-fullscreen:2147483648;
   background: no-repeat fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -339,3 +340,87 @@ body {
 #root .ui.menu .ui.button {
   background-color: transparent;
 }
+
+#root .video-player {
+  width: 100vw;
+  height: 100vh;
+}
+
+#root .player-wrapper {
+  width: 100%;
+  height: 100%;
+  background-color: black;
+}
+
+#root .video-player .header-bar span {
+  text-align: center;
+  width: 100%;
+  display: inline-block;
+  font-weight: bold;
+  margin-top: 15px;
+}
+
+#root .video-player .header-bar .button:hover {
+    background-color: rgba(var(--primary-light), 0.5);
+}
+#root .video-player .header-bar .button {
+    background-color: transparent;
+}
+
+#root .video-player .header-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  z-index: var(--z-index-for-fullscreen);
+  background-color: rgba(var(--primary-dark), 0.7);
+  height:60px;
+  padding: 8px;
+  color: rgba(255,255,255, 0.7);
+  -webkit-transition: 500ms ease all;
+  transition: 500ms ease all;
+}
+
+
+#root .video-player .control-bar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100vw;
+  z-index: var(--z-index-for-fullscreen);
+  background-color: rgba(var(--primary-dark), 0.7);
+  -webkit-transition: 500ms ease all;
+  transition: 500ms ease all;
+}
+
+#root .video-player .control-bar.hidden {
+  visibility: hidden;
+}
+
+#root .video-player .header-bar.hidden {
+  visibility: hidden;
+}
+
+#root .video-player .controls {
+  padding:20px;
+}
+
+#root .video-player .controls .time {
+  width: 100%;
+  text-align: center;
+  opacity: 0.5;
+  margin-top:10px;
+}
+
+#root .video-player .controls .button{
+  background-color: transparent;
+}
+
+#root .video-player .controls .button:hover{
+  background-color: rgba(var(--primary-light), 0.5);
+}
+
+#root .video-player .control-bar .buffered-progress .bar {
+  background-color: rgb(var(--primary-accent));
+}
+
